# python-app-template

./: GITLAB_BADGES.txt  README.md  index.html  pyproject.toml  python_app_template.html  search.js
.github/workflows/: ci.yml
python_app_template/: index.html  index.md  main.html  main.md  main.py
tests/: test_main.py
